[B]1.0.4[/B]
- updated: to use IMDb scraper library v2.2.2

[B]1.0.3[/B]
- updated: to use IMDb scraper library v2.2.1

[B]1.0.2[/B]
- added: support for OFDb.de plot

[B]1.0.1[/B]
- fixed: put UK back on the map
- added: poster from IMDb is now optional

[B]1.0.0[/B]
- Initial version