@@ -1,3 +1,6 @@
+[B]1.0.5[/B]
+- added: some improvement to match movies by their International Titles
+
 [B]1.0.4[/B]
 - updated: to use IMDb scraper library v2.2.2
 
